# Email_automation_package-

./: README.md
files/: email_automation_isbd-1.0.0-py3-none-any.whl
files/email_automation_isbd_package/email_package/: .env.example  .gitignore  MANIFEST.in  pyproject.toml  setup.py
files/email_automation_isbd_package/email_package/email_project/: settings.py
